@@ -8,6 +8,7 @@
 <body>
 <div metal:fill-slot="content-core">
  <div style="width: 500px">
+  <a class="oembed oembed-responsive" href="http://360.io/jLnBUy"></a>
   <a class="oembed oembed-responsive" href="https://itunes.apple.com/fr/app/google-maps/id585027354"></a>
   <a class="oembed oembed-responsive" href="http://www.youtube.com/watch?v=kHikGIWrvCs"></a>
   <a class="oembed oembed-responsive" href="http://www.youtube.com/playlist?list=PLF2CEDC7FD9EADDC5"></a>
