@@ -9,6 +9,7 @@
   <utility factory=".googledocs.GoogleDocsURLEndPoint" name="googledocs"/>
   <utility factory=".googlemaps.GoogleMapsURLEndPoint" name="googlemaps"/>
   <utility factory=".itunes.ITunesURLEndPoint" name="itunes"/>
+  <utility factory=".occipital360.Occipital360EndPoint" name="occipital360"/>
   <utility factory=".scribd.ScribdURLEndPoint" name="scribd"/>
 
   <browser:page
