@@ -10,6 +10,7 @@ Changelog
 - Add responsive behavior to oembed photo type provider, and video embed
   and object type
 - Add itunes.apple.com support (iphone app)
+- Add 360.io support (occipital)
 
 1.2.4 (2013-01-02)
 ------------------
